Fixed extra space on mobile

--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ article {
 }
 .translate-x-r {
   opacity: 0;
-  transform: translateX(65%);
+  transform: translateX(60%);
   transition: opacity 0.5s ease-out, transform 0.7s ease-out;
 }
 .translate-x-l {
